--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install Dependencies
         run: go mod tidy
 
+      - name: Download Dependencies
+        run: go mod download
+
       - name: Build Project
         run: go build ./...
 
