--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -16,16 +16,14 @@ jobs:
       - name: Checkout Full History
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  
+          fetch-depth: 0
 
       - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v3.2.1
-        with:
-          versionSpec: '6.0.0'
+        uses: gittools/actions/gitversion/setup@v4.0.0
 
       - name: Calculate Version
         id: version
-        uses: gittools/actions/gitversion/execute@v3.2.1
+        uses: gittools/actions/gitversion/execute@v4.0.0
 
       - name: Set Up Go
         uses: actions/setup-go@v5
@@ -34,6 +32,9 @@ jobs:
 
       - name: Install Dependencies
         run: go mod tidy
+
+      - name: Download Dependencies
+        run: go mod download
 
       - name: Build Project
         run: go build ./...
